# rodent-bot

./: .gitignore  Cargo.toml  README.md  table.sql
config/: default.toml
migrations/2019-02-24-204850_create_users/: up.sql
migrations/2019-03-02-173833_add_email_to_users_and_roles/: down.sql  up.sql
migrations/2019-03-04-194214_add_contexts/: down.sql  up.sql
src/: main.rs  schema.rs
src/app/: config.rs  db.rs  logging.rs  mod.rs
src/domain/: config.rs  context.rs  db.rs  error.rs  mod.rs  pipeline.rs
src/domain/models/: user.rs
src/domain/resolvers/confirmation/: mod.rs  resolver.rs  state.rs
src/domain/services/: mod.rs
src/domain/services/confirmation/: mod.rs  model.rs  service.rs
src/domain/services/context/: mod.rs  model.rs  service.rs
src/domain/services/users/: mod.rs  model.rs  service.rs
src/domain/side_effects/: mod.rs  telegram.rs  user_actions.rs
src/domain/stages/: authorize.rs  handle_error.rs  identify.rs  logging.rs  mod.rs  process.rs  stored_context.rs  telegram_side_effects.rs  user_actions_side_effects.rs
src/domain/stages/reducers/: mod.rs  telegram.rs  user_actions.rs
src/lib/: mod.rs
src/lib/pipeline/: builder.rs  mod.rs  types.rs
src/lib/telegram/: mod.rs  part.rs  renderer.rs  utils.rs
